--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,14 @@
 /public/uploads
 
 /*~
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
